fix: expansion header should have a larger z-index than clode block inside

--- a/packages/theme-default/src/style.css
+++ b/packages/theme-default/src/style.css
@@ -50,6 +50,7 @@ html[data-theme="dark"] {
 .c-expansion--expanded .c-expansion--header {
   position: sticky;
   bottom: 0;
+  z-index: 9;
 }
 
 .admonition {
